--- a/03-CSS/src/css/mech/mech-animated-accent.css
+++ b/03-CSS/src/css/mech/mech-animated-accent.css
@@ -1,10 +1,44 @@
 .gameBox {
-        
+    background: radial-gradient(
+        circle at 100% 100%, 
+        transparent 16%, 
+        rgb(97, 73, 43) 16.2%, 
+        rgb(114, 133, 72) 50%, 
+        rgb(97, 73, 43) 100%
+    );
 }
 
 .accent {
     /* Position und Größe*/
+    position: absolute;
+    right: .5vh;
+    bottom: .5vh;
+    width: 20vh;
+    height: 20vh;
+    background-color: #777;
+    border-radius: 50%;
+    border-width: 1vh;
+    border-style: dashed;
+    border-color: #999;
+    background-clip: padding-box;
+    box-shadow: 0 0 0 .8vh inset #999, 
+    0 0 .5vh 1.2vh inset #666, 
+    0 0 .5vh 3vh inset #aaa, 
+    0 0 0 3.5vh inset #666, 
+    0 0 0 4.5vh inset #999,
+    0 0 .5vh 7vh inset #61492b,
+    0 0 0 7vh inset black,
+    0 0 0 8vh inset #aaa;
+    z-index: -1;
+    
+    /*nicht sicher ob hier oder wo anders.*/
+    
+    
 
+    animation: rotation 5s normal linear infinite;
+
+
+    /*83 erweitert*/
     /* Hintergrund */
 
     /* Border */
@@ -18,5 +52,7 @@
 }
 
 @keyframes rotation {
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
 
 }
